# yt-dlp-gui

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Dockerfile  HACKING.md  MANIFEST.in  Makefile  README.md  pyproject.toml  yt-dlp-gui.spec
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: build.yml  release.yaml
app/: app.py  config.toml  utils.py
app/ui/assets/: yt-dlp-gui.icns
scripts/: clear-pycache.sh  deterministic-tgz.sh  generate_metadata.py  install-linux-deps.sh  run.py
src/yt_dlp_gui/: __init__.py  app.py  cli.py  config.py  dep_dl.py  metadata.py  utils.py  worker.py
src/yt_dlp_gui/data/: sample_config.toml
src/yt_dlp_gui/ui/: app.ui  app_ui.py  download.ui  download_ui.py  icons_rc.py
src/yt_dlp_gui/ui/assets/: icons_rc.py
