[project]
name = "yt-dlp-gui"
version = "0.1.0"
description = "A cross-platform GUI wrapper for yt-dlp written in PySide6"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyside6==6.7.2",
    "requests>=2.32.3",
    "toml==0.10.2",
    "tqdm==4.67.1",
    # Install pyinstaller from PyPI on non-Windows platforms
    "pyinstaller==6.13.0 ; sys_platform != 'windows'",
    # Install pyinstaller from a specific wheel on Windows
    "pyinstaller @ https://yt-dlp.github.io/Pyinstaller-Builds/x86_64/pyinstaller-6.13.0-py3-none-any.whl ; sys_platform == 'windows'",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyside6-stubs>=6.7.3.0",
    "ruff>=0.11.8",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]
