[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-dlp-gui"
version = "0.1.1"
description = "A cross-platform GUI wrapper for yt-dlp written in PySide6"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "platformdirs",
    "pyside6==6.9.0",
    "requests>=2.32.3",
    "toml==0.10.2",
    "tqdm==4.67.1",
    # Install pyinstaller from PyPI on non-Windows platforms
    "pyinstaller==6.13.0 ; sys_platform != 'windows'",
    # Install pyinstaller from a specific wheel on Windows
    "pyinstaller @ https://yt-dlp.github.io/Pyinstaller-Builds/x86_64/pyinstaller-6.13.0-py3-none-any.whl ; sys_platform == 'windows'",
]

[project.scripts]
yt-dlp-gui = "yt_dlp_gui.app:main"


# Install these deps with `pip install --group dev`.
# (Requires pip > ~ 23.1 or so.)
[dependency-groups]
dev = [
    "mypy",
    "pre-commit>=4.2.0",
    "pylint",
    "pyside6-stubs>=6.7.3.0",
    "ruff>=0.11.8",
    "types-requests",
    "types-tqdm",
    "types-toml",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
# list of folders that contain the packages:
where = ["src"]

# non-python data files to be installed alongside
# python code; accessible using importlib.resources
[tool.setuptools.package-data]
"yt_dlp_gui" = ["data/*.toml"]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]

# we like explicit open modes
ignore = ["UP015"]
exclude = [
    # ignore generated qt files
    "*_ui.py",
    "*_rc.py"
]

